ZMCIntegral/vectest.163093.err
  File "./vec-test.py", line 9
    f = numba.types.array(float32, 1d, A)
                                    ^
SyntaxError: invalid syntax
srun: error: gpu-0-0: task 0: Exited with exit code 1
